ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudpulse
  namespace: cloudpulse
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: cloudpulse.local
    http:
      paths:
      # API .NET: Encaminha tudo que começa com /api para o serviço
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: cloudpulse-core-api
            port:
              number: 5223
      # Frontend: Tudo o que não for /api, vai para o frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudpulse-frontend
            port:
              number: 80
